--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body {
   /* Backgroung Color */
   --bg-primary-color: #0c0c0c;
   --bg-fill-color: rgba(255, 255, 255, 0.838);
+  --bg-food-color : rgb(196, 0, 0);
 
 
   /* Text Color */
@@ -81,4 +82,7 @@ section #infos{
 }
 .fill{
   background-color: var(--bg-fill-color);
+}
+.food{
+  background-color: var(--bg-food-color);
 }
