--- a/style.css
+++ b/style.css
@@ -51,11 +51,24 @@ main,section{
   height: 100%;
 
 }
+
+.btn{
+  padding: var(--space-sm) var(--space-md);
+  border: none;
+  border-radius: var(--space-xs);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.btn:hover{
+  transform: scale(1.1);
+}
+
+
 section{
+  height: 100%;
   padding: var(--space-2xl) ;
   display: flex;
   flex-direction: column;
-  height: 100%;
   gap: var(--space-lg);
 }
 section #infos{
@@ -85,4 +98,32 @@ section #infos{
 }
 .food{
   background-color: var(--bg-food-color);
+}
+
+.modal{
+  height: 100vh;
+  width: 100vw;
+  inset: 0;
+  position: fixed;
+  top: 0;
+  background-color: #2e2d2dd3;
+  backdrop-filter: blur(4px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+  .modal .start-game,
+  .modal .game-over{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--space-lg);
+ 
+ 
+}
+ .modal .game-over{
+  display: none;
 }
