--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section #infos{
   grid-template-rows: repeat(auto-fill, minmax(50px,1fr));
 }
 .block{
-  /* border-radius: 50%; */
+  border-radius: 50%;
   border: 1px solid var(--border-primary-color);
 }
 .fill{
